# epub2kr

./: .gitignore  CLAUDE.md  NOTICE  README.md  README_kr.md  pyproject.toml
src/epub2kr/: __init__.py  cache.py  cli.py  config.py  epub_parser.py  gui.py  image_translator.py  ocr_cache.py  restyle.py  text_extractor.py  translator.py
src/epub2kr/services/: __init__.py  base.py  deepl.py  google.py  ollama.py  openai_service.py
tests/: conftest.py  test_benchmark.py  test_cache.py  test_config.py  test_epub_parser.py  test_image_translator.py  test_integration.py  test_ocr_cache.py  test_restyle.py  test_services.py  test_text_extractor.py  test_translator.py
