[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub2kr"
version = "0.1.0"
description = "EPUB translation tool with layout preservation"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "ebooklib>=0.18",
    "lxml>=5.0",
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.31",
    "openai>=1.0",
    "deepl>=1.16",
    "langdetect>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1"]

[project.scripts]
epub2kr = "epub2kr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
